# GiBUU_MINERvA_Simulation

./: CMakeLists.txt  README.md  events.csv
include/: .DetectorConstruction.hh.swp  DetectorConstruction.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
src/: .DetectorConstruction.cc.swp  .PrimaryGeneratorAction.cc.swo  .PrimaryGeneratorAction.cc.swp  .main.cc.swp  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SteppingAction.cc  main.cc
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
